--- a/src/stories/documentTypes/Event.stories.mdx
+++ b/src/stories/documentTypes/Event.stories.mdx
@@ -20,7 +20,8 @@ main footer. All content (slices) on the page is designed to be responsive to
 work on both mobile and desktop devices.
 
 Event pages content in the **Body** tab is created using Slices. For more
-information on Slices, [refer to the Slice documentation](/).
+information on Slices,
+[refer to the Slice documentation](/story/slices-call-to-action--default).
 
 ### Fields
 
