--- a/src/stories/documentTypes/Page.stories.mdx
+++ b/src/stories/documentTypes/Page.stories.mdx
@@ -19,7 +19,8 @@ footer. All content (slices) on the page is designed to be responsive to work on
 both mobile and desktop devices.
 
 Page content in the **Body** tab is created using Slices. For more information
-on Slices, [refer to the Slice documentation](/).
+on Slices,
+[refer to the Slice documentation](/story/slices-call-to-action--default).
 
 ### Fields
 
