--- a/src/stories/documentTypes/Sponsor.stories.mdx
+++ b/src/stories/documentTypes/Sponsor.stories.mdx
@@ -8,7 +8,7 @@ import { FieldsTable } from "../components/FieldsTable"
 The Sponsor custom type represents a sponsor's information and a sponsor on the
 site. This document type is primarily used in conjunction with the
 [Sponsors List](/story/document-types-sponsors-list--page) document type and the
-[Sponsors Slice](/).
+[Sponsors Slice](/story/slices-sponsors--default).
 
 ### Fields
 
