--- a/src/stories/documentTypes/SponsorsList.stories.mdx
+++ b/src/stories/documentTypes/SponsorsList.stories.mdx
@@ -7,10 +7,10 @@ import { FieldsTable } from "../components/FieldsTable"
 
 The Sponsors List custom type represents a listing of
 [Sponsors](/story/document-types-sponsor--page) and is primarily used in
-conjunction with the [Sponsors Slice](/).
+conjunction with the [Sponsors Slice](/story/slices-sponsors--default).
 
 This document type is used to set the order of sponsors when it is selected via
-the [Sponsors Slice](/).
+the [Sponsors Slice](/story/slices-sponsors--default).
 
 ### Fields
 
