--- a/src/stories/styleGuide/Typography.stories.mdx
+++ b/src/stories/styleGuide/Typography.stories.mdx
@@ -5,7 +5,7 @@ import { Typography } from "../components/Typography"
 
 <Meta title="Style Guide/Typography" />
 
-# Colors
+# Typography
 
 A list of the typographic styles used throughout the site. Reference this
 document when dealing with any Rich Text fields in Prismic.
